--- a/notebooks/05_appendixD_vignetteR.Rmd
+++ b/notebooks/05_appendixD_vignetteR.Rmd
@@ -95,22 +95,29 @@ disturbances is similar to estimating their scale of effect while also taking
 into account the shape of their influence (i.e. how they are spatially weighted;
 Miguet et al., 2017).
 
-Here we give an overview of the functions in `oneimpact`, define and provide 
-examples for the zone of influence functions, show how to use the main functions, 
+Here we give an overview of the functions in `oneimpact`, define and illustrate 
+the zone of influence functions, show how to use the main package functions, 
 and provide an example of how to use this approach to annotate data for 
 statistical analysis.
 
-We start by loading the `oneimpact` package and other packages used in this
+To install the `oneimpact` package, it is possible to use the 
+`devtools::install_github()` function:
+
+```{r install, eval=FALSE}
+library(devtools)
+devtools::install_github(repo = "NINAnor/oneimpact", ref = "HEAD")
+```
+
+Once installed, we now loading the `oneimpact` package and other packages used in this
 vignette.
 
 ```{r load_packages, message=FALSE, warning=FALSE, eval=TRUE, echo=TRUE}
 library(oneimpact)
-library(ggplot2) 
-library(terra) 
-library(sf)
-library(dplyr)
+library(ggplot2) # for plots
+library(terra) # for spatial processing
+library(sf) # for spatial operations
+library(dplyr) # for data wrangling
 ```
-
 
 # Overview of the package
 
@@ -124,9 +131,10 @@ expands in space (or how fast it decreases with distance).
 Both functions can be run in R environment (R Core Team, 2021) and in GRASS GIS 
 environment (GRASS Development Team, 2017). 
 This is defined by the parameter `where`. On the one hand, computations
-in R are fast and easy-to-use, since they make use of the optimized functions from the
-`terra` package (Hijmans, 2022). However, computations might become slow for large maps. In GRASS GIS,
-on the other hand, it is possible to compute the ZoI for very large maps using the
+in R are generally fast and easy-to-use, since they make use of the optimized 
+functions from the `terra` package (Hijmans, 2022). However, computations 
+might become slow for large maps. On the other hand, in GRASS GIS, 
+it is possible to compute the ZoI for very large maps using the
 software's algorithms, and given that GRASS GIS does not store maps
 in the computer's memory. In GRASS GIS, the calculation of the ZoI requires an 
 active connection between the R session and a GRASS GIS location and mapset 
@@ -135,25 +143,6 @@ this GRASS GIS mapset.  Furthermore, in GRASS GIS the function returns only the
 name of the output map. This map is stored in the the GRASS GIS location/mapset, 
 and might be retrieved to R through the `rgrass::read_RAST()` function
 or exported outside GRASS using the `r.out.gdal` module, for instance.
-
-Table D1: Main functions in `oneimpact` used to calculate zones of influence. They are 
-divided in three types: zone of influence functions ("ZoI functions"), functions to 
-compute the ZoI for raster maps ("Compute the ZoI"), and functions to create filters
-or weight matrices for use in the computation of the cumulative ZoI ("Create filters").
-
-<center>
-
-| Type of function | Function | Description |
-|---|----|------------|
-| ZoI functions | `threshold_decay()` \ `step_decay()` \ `linear_decay()` \ `bartlett_decay()` \ `tent_decay()` \ `exp_decay()` \ `gaussian_decay()` \ `half_norm_decay()` | This functions computes Zone of Influence (ZoI) decay values.  The functions with different shapes represent multiple ways the ZoI  of an infrastructure or disturbance might affect a given process in  space, and the ZoI radius (parameter `zoi_radius`) controls how far this effect  reaches. The rate of decay of the different ZoI functions is parameterized  based on the ZoI radius – e.g the slope of `linear_decay()` is defined so that the function decreases to zero at the ZoI radius. These functions can  be used to transform arrays of (Euclidean) distance values (in one dimension)  or rasters of (Euclidean) distance (in two dimensions) into ZoI values.  The distance might represent the distance to human infrastructure,  sources of disturbance, or more broadly any type of land use class or  spatial variable. |
-| ZoI functions | `plot_zoi1d()` | This function plots the zone of influence functions in 1 dimensional space, for illustration. When there is more than one value for `points` (the location of infrastructure or sources of disturbance), either the ZoI of the nearest feature or the cumulative ZoI can be plotted. The ZoI of the nearest feature corresponds to the maximum ZoI value from all infrastructure at each position. The cumulative ZoI corresponds to the sum of the ZoI of all infrastructure at each position. |
-| Compute ZoI | `calc_zoi_nearest()` | This function takes in a raster with locations or  counts of infrastructure and calculates a raster  representing the zone of influence from the  neareast feature of that type of infrastructure.  Zones of influence are defined by functions that decay with  the distance from each infrastructure and their rate of decay  is controlled by the ZoI radius (parameter `zoi_radius`), which defines  how far the influence of an infrastructure feature goes.  By default, the Gaussian decay ZoI is calculated, but other  decay functions might be used (parameter `type`). The function might also return the  Euclidean distance to the nearest feature or a transformation from it  (e.g. log- and sqrt-distance from the nearest feature). |
-| Compute ZoI | `calc_zoi_cumulative()` | This function takes in a raster with locations or counts  of infrastructure and calculates a raster representing the cumulative zone of influence or the density of features in space.  The process is done through a moving window/neighborhood analysis. The ZoI or weight matrix is defined from zone of influence  functions, which might follow different shapes (parameter `type`) and cover  an area according to the ZoI radius (parameter `zoi_radius`). |
-| Compute ZoI | `calc_zoi()`  | This function takes in a raster with locations or counts of infrastructure and calculates a raster with either or both zone of influence metrics: the ZoI of the nearest feature only and the cumulative ZoI. |
-| Create filters | `create_filter()` | This function creates matrices of weights following different functions to be used in neighborhood analyses for rasters. In the context of cumulative impact analysis, they represent the Zone of Influence (ZoI) of each infrastructure point/pixel, to be used to calculate the cumulative ZoI or density of features. |
-| Create filters | `save_filter()` | This function saves a matrix with weights (filter or kernel matrix) in an external text file. It can save either the raw matrix or use the standards for running `r.mfilter` within GRASS GIS. |
-
-</center>
 
 The ZoI of the nearest feature (the output of `calc_zoi_nearest()`) is based on 
 transformations of the map of distance to the nearest feature. First, this map is 
@@ -165,8 +154,27 @@ shown in Table D1 and might be explored with the command `help(zoi_functions)`.
 They might also be plotted in 1 dimensional space with the `plot_zoi1d()` function,
 for illustration of their behavior.
 
+Table D1: Main functions in `oneimpact` used to calculate zones of influence. They are 
+divided in three types: zone of influence functions ("ZoI functions"), functions to 
+compute the ZoI for raster maps ("Compute the ZoI"), and functions to create filters
+or weight matrices for use in the computation of the cumulative ZoI ("Create filters").
+
+<center>
+
+| Type of function | Function | Description |
+|---|----|------------|
+| ZoI functions | `threshold_decay()` \ `step_decay()` \ `linear_decay()` \ `bartlett_decay()` \ `tent_decay()` \ `exp_decay()` \ `gaussian_decay()` \ `half_norm_decay()` | These functions computes Zone of Influence (ZoI) decay values.  The functions with different shapes represent multiple ways the ZoI  of an infrastructure or disturbance might affect a given process in  space, and the ZoI radius (parameter `zoi_radius`) controls how far this effect  reaches. The rate of decay of the different ZoI functions is parameterized  based on the ZoI radius – e.g the slope of `linear_decay()` is defined so that the function decreases to zero at the ZoI radius. These functions can  be used to transform arrays of (Euclidean) distance values (in one dimension)  or rasters of (Euclidean) distance (in two dimensions) into ZoI values. The distance might represent the distance to anthropogenic infrastructure, sources of disturbance, or more broadly any type of land use class or  spatial variable. |
+| ZoI functions | `plot_zoi1d()` | This function plots the zone of influence functions in 1 dimensional space, for illustration purposes. When there is more than one value for `points` (the location of infrastructure or sources of disturbance), either the ZoI of the nearest feature or the cumulative ZoI can be plotted. The ZoI of the nearest feature corresponds to the maximum ZoI value from all infrastructure at each position. The cumulative ZoI corresponds to the sum of the ZoI of all infrastructure at each position. |
+| Compute ZoI | `calc_zoi_nearest()` | This function takes in a raster with locations or counts of infrastructure features and calculates a raster representing the zone of influence from the neareast feature of that type of infrastructure. Zones of influence are defined by functions that decay with  the distance from each infrastructure and their rate of decay is controlled by the ZoI radius (parameter `zoi_radius`), which defines  how far the influence of an infrastructure feature goes. By default, the Gaussian decay ZoI is calculated, but other  decay functions might be used (parameter `type`). The `calc_zoi_nearest()` function might also return the Euclidean distance to the nearest feature or a transformation from it (e.g. log- and sqrt-distance from the nearest feature). |
+| Compute ZoI | `calc_zoi_cumulative()` | This function takes in a raster with locations or counts of infrastructure features and calculates a raster representing the cumulative zone of influence or the density of features in space. The process is done through a moving window/neighborhood analysis. The ZoI or weight matrix is defined from zone of influence  functions, which might follow different shapes (parameter `type`) and cover an area according to the ZoI radius (parameter `zoi_radius`). |
+| Compute ZoI | `calc_zoi()`  | This function takes in a raster with locations or counts of infrastructure and calculates a raster with either or both zone of influence metrics: the ZoI of the nearest feature only and the cumulative ZoI. |
+| Create filters | `create_filter()` | This function creates matrices of weights following different functions to be used in neighborhood analyses for rasters. In the context of cumulative impact analysis, they represent the Zone of Influence (ZoI) of each infrastructure point/pixel, to be used to calculate the cumulative ZoI or density of features. |
+| Create filters | `save_filter()` | This function saves a matrix with weights (filter or kernel matrix) in an external text file. It can save either the raw matrix or save a file using the standards for running the `r.mfilter` algorithm within GRASS GIS. |
+
+</center>
+
 The cumulative ZoI of the multiple features (the output of `calc_zoi_cumulative()`) 
-is based on neighborhood analysis using spatial filters that determine the ZoI
+is based on a neighborhood analysis using spatial filters that determine the ZoI
 functions. The same ZoI functions might be used in both `calc_zoi_nearest()` 
 and `calc_zoi_cumulative()`, accounting
 for different ZoI shapes and radii, but in the latter they are used to create 
@@ -176,7 +184,7 @@ These and other weight matrices might be created through the function
 `create_filter()`.
 The function `calc_zoi_cumulative()` computes the neighborhood analysis 
 through the `terra::focal()` function in R and through one 
-of the modules in GRASS GIS: `r.mfilter`, `r.resamp.filter`, and `r.neighbors`. 
+of the modules in GRASS GIS: `r.mfilter`, `r.resamp.filter`, or `r.neighbors`. 
 The module to be used might be determined by the user (parameter `module`).
 
 # The concept of zone of influence
@@ -195,10 +203,10 @@ same functions (e.g. `linear_decay()` and `bartlett_decay()`).
 
 ## ZoI functions
 
-### Functions with a well-defined radius
+### Functions with a well-defined ZoI radius
 
 Some functions vanish for a certain non-infinite distance and therefore present
-well-defined radii. Here the ZoI radius $r$ represents the distance at which $\phi = 0$.
+well-defined ZoI radii. Here the ZoI radius $r$ represents the distance at which $\phi = 0$.
 Two functions of this type are implemented in `oneimpact`: the threshold and the linear
 decay functions.
 
@@ -335,8 +343,8 @@ To exemplify their difference, we illustrate them using a Gaussian decay ZoI
 in 1 dimension space using the `plot_zoi1d()` function.
 We set four sources of disturbance
 (e.g. houses) located at $x = 0$, $x = 2$, $x = 8$, and $x = 12$, and set the
-the ZoI radius as $\verb|zoi_radius = 3|$. We start by plotting the ZoI of the nearest
-feature only by setting $\verb|cumulative = FALSE|$:
+the ZoI radius of each feature as $\verb|zoi_radius = 3|$. We start by plotting 
+the ZoI of the nearest feature alone by setting $\verb|cumulative = FALSE|$:
 
 ```{r zoi_metrics_near, fig.cap="Metric of ZoI of the neareast feature for multiple sources of disturbance illustrated in 1 dimension using a Gaussian decay ZoI with radius = 3."}
 disturbance_locations <- c(0, 2, 8, 12)
@@ -349,7 +357,7 @@ plot_zoi1d(points = disturbance_locations, zoi_radius = 3, fun = gaussian_decay,
 The location of the disturbance sources is shown by the vertical dashed lines. Notice that the
 the maximum value for the ZoI of the nearest feature is 1.
 
-Now we do the same but considering the ZoI of each feature accumulates. We do it by
+Now we do the same but considering that the ZoI of each feature accumulates. We do it by
 setting $\verb|cumulative = TRUE|$ in `plot_zoi1d()`:
 
 ```{r zoi_metrics_cum, fig.cap="Metric of cumulative ZoI for multiple sources of disturbance illustrated in 1 dimension using a Gaussian decay ZoI with radius = 3."}
@@ -362,7 +370,7 @@ plot_zoi1d(points = disturbance_locations, zoi_radius = 3, fun = gaussian_decay,
 Notice that the the maximum value for the cumulative ZoI of multiple features might be higher
 than 1 where the ZoI of different features overlap.
 
-# Calculating the ZoI
+# Calculating the ZoI for rasters
 
 ## Define the input raster map
 
@@ -370,7 +378,7 @@ To calculate the ZoI metrics for 2 dimensional raster objects, we use the functi
 `calc_zoi_nearest()` and `calc_zoi_cumulative()`. To give an example, we present a 
 data set with the
 location of private cabins in Norway, subset for a small study region in Southern Norway.
-The data is mapped as points in vector format, and more information about it might be
+The data is mapped as points in vector format; more information about it might be
 found using the command `help(cabins_vect.gpkg)`. We read the vector file using the
 package `terra`:
 
@@ -389,7 +397,7 @@ plot(cabins_vect, cex = 0.5)
 If the input map is already in raster format, it can be used directly in the `calc_zoi_*()`
 functions. In our case, since it is in vector format, it must be rasterized first.
 For many types of anthropogenic infrastructure or disturbance which are represented
-by lines or polygons (e.g. roads, power lines, deforestation areas), it is enough to
+by lines or polygons (e.g. roads, power lines, areas of deforestation), it is enough to
 create a binary raster as a dummy variable with value 1 where the disturbance is
 located and 0 (or `NA`) elsewhere.
 For point representation of infrastructure, though, it might be more interesting to
@@ -413,8 +421,8 @@ plot(cabins_rast)
 
 This map presents the number of cabins in each pixel and `NA` where there are no cabins.
 In GRASS GIS, it is possible to use the ancillary `oneimpact` function
-`grass_v2rast_count()` to count the number of features per pixel and get the output as
-a raster object.
+`grass_v2rast_count()` to count the number of features of a vector in each pixel 
+and get the output as a raster object.
 
 ## Calculate the ZoI of the nearest feature only
 
@@ -442,9 +450,10 @@ feature.
 ## Calculate the cumulative ZoI of multiple features
 
 Differently from `calc_zoi_nearest()`, the input raster map for the `calc_zoi_cumulative()`
-should present zeros as the background (pixels with no cabins). In R background NA
+should present zeros as the background (pixels with no cabins). In R, background `NA`
 values might be checked and reclassified to zero using the $\verb|zeroAsNA = TRUE|$ parameter,
-but in GRASS GIS this is not done. In this case, the easiest is to prepared the input
+but in GRASS GIS this is not implemented In this case, the easiest procedure 
+is to prepare the input
 raster map outside GRASS or make use of the module `r.null` for managing
 no-data values is rasters within GRASS.
 We calculate the cumulative ZoI of multiple features using the same setup -- a Gaussian
@@ -469,7 +478,8 @@ weight matrices might be set e.g. through `terra::focalMat()` (Hijmans, 2022) or
 functions are parameterized differently, with no reference to the ZoI radius as
 the ones defined in `oneimpact`.
 
-For `calc_zoi_cumulative()` The user might choose between the cumulative ZoI metric when
+For `calc_zoi_cumulative()`, the user might choose between computing the 
+cumulative ZoI metric when
 $\verb|output_type = "cumulative_zoi"|$
 (default), or the density of features if $\verb|output_type = "density"|$. The cumulative
 ZoI is the (distance weighted) number of features per unit of space, and
@@ -480,18 +490,19 @@ As a consequence, the density of features generally presents values lower than
 or close to 1. Both measures represent the same spatial variation, but the interpretation
 of their values is different.
 
-# Using the approach to annotate and analyze data
+# Using the ZoI approach to annotate and analyze data
 
 In the cumulative impact assessment proposed in `oneimpact`, the calculation of the 
 ZoI ($\phi$) is done before statistical analysis. In this formulation, $\phi$ defined 
 based on different shapes and radii are considered as different covariates 
 (Fig. D\ref{fig:workflow}). Therefore, the evaluation of how the impact of multiple 
-infrastructure features accumulate and the identification of the ZoI shape and size 
+infrastructure features accumulate and the identification of the ZoI shape and radius 
 are recasted as a model selection rather than a parameterization problem.
 
 ```{r workflow, echo=FALSE, fig.cap="Workflow for calculating infrastructure ZoI and estimating the cumulative impact and ZoI radius of multiple infrastructure. Infrastructure raster data are input to the calc\\_zoi\\_*() functions, which allow the calculation of the ZoI of the nearest feaure and the cumulative ZoI based on arguments for the ZoI shape and radius. The output influence rasters and other environmental data are then annotated to biological data, and for each infrastructure type each ZoI metric defined by a shape and radius is considered as a different covariate. The annotated data is then analyzed to estimate the effect size and the Zoi radius for each infrastructure type and calculate the impact I.", out.width="100%"}
 knitr::include_graphics("../text/figures/figure_workflow.png")
 ```
+
 Figure D\ref{fig:workflow} shows a workflow for calculating the ZoI metrics and 
 using them to annotate biological data for the estimation of cumulative impacts.
 The calculation of the ZoI of the nearest feature and the cumulative ZoI might be 
@@ -499,13 +510,13 @@ done for different ZoI shapes, radii, and infrastructure type, and each of those
 combinations turn into a different covariate when annotated to the biological
 data for ecological modeling.
 
-Here we create a dataset of sampling points and a theoretical random response 
-variable to show the process of calculation of ZoI variables and the annotation
+Here we simulate a data set of sampling points and a theoretical random biological 
+response variable to show the process of calculation of ZoI variables and the annotation
 of the biological data.
 
 First we create in the study area $n = 40$ random locations representing sampling points
 for a given response variable `z` (e.g. species richness or abundance). We sample
-the locations using the `set_points()` function from the `oneimpact` package and 
+the locations using the `set_points()` function from the package `oneimpact` and 
 simulate the response variable
 `z` as a Poisson distributed random variable with mean $\lambda = 10$. The simulated
 sampled data is shown in Fig. D\ref{fig:set_points}.
@@ -552,6 +563,7 @@ zoi_all <- c(zoi_exp_nearest, zoi_exp_cumul)
 # plot
 plot(zoi_all)
 ```
+
 Finally, the ZoI variables can be used to annotate the biological data for statistical
 analysis.
 
@@ -570,8 +582,10 @@ head(bio_data_annotated)
 From this point, biological data can also be annotated with the ZoI of other disturbance
 variables and with other environmental covariates and used as input for the 
 estimation of the effect sizes $\beta$ and evaluation of the cumulative effects for 
-different types of infrastructure through statistical models. Statistical analyses 
-can make use of model selection (Burnham & Anderson, 2002; Huais, 2018), 
+different types of infrastructure through statistical models (Fig. D\ref{fig:workflow})
+Statistical analyses 
+can make use of model selection (Burnham & Anderson, 2002; Jackson & Fahrig, 2015;
+Huais, 2018), 
 penalized regression (Lee et al., 2020), or machine learning approaches, for example 
 (James et al., 2021). 
 Such statistical modeling procedures are beyond the scope of `oneimpact`.
@@ -595,6 +609,10 @@ https://CRAN.R-project.org/package=terra
 
 Huais, P. Y. (2018). multifit: An R function for multi-scale analysis in landscape
 ecology. Landscape Ecology, 33(7), 1023–1028. https://doi.org/10.1007/s10980-018-0657-5
+
+Jackson, H. B., & Fahrig, L. (2015). Are ecologists conducting research at the 
+optimal scale? Global Ecology and Biogeography, 24(1), 52–63. 
+https://doi.org/10.1111/geb.12233
 
 James, G., Witten, D., Hastie, T., & Tibshirani, R. (2021). An introduction to 
 statistical learning: With applications in R (Second edition). Springer.
