--- a/notebooks/02_appendixB_comparing_zoi_measures.Rmd
+++ b/notebooks/02_appendixB_comparing_zoi_measures.Rmd
@@ -983,13 +983,12 @@ However, whether a given biological response variable is affected by only the ne
 or the cumulative ZoI of multiple features (or none) remain an empirical problem 
 to be explored in real landscapes.
 
-The results presented here  
-assume infrastructure represented as points, chosen here because of the simplicity 
-to represent them and place them following different patterns. Yet, these cases 
-also provide insights on when $\phi_{nearest}$ and $\phi_{cumulative}$ are similar for other 
-types of infrastructure, for instance linear infrastructure 
-(e.g. roads, railways, and power lines) and higher dimensional landscape changes 
+The results presented here assume infrastructure represented as points, chosen 
+here because of the simplicity to represent them and place them following 
+different patterns. Yet, these cases also provide insights on when $\phi_{nearest}$ and $\phi_{cumulative}$ are similar for other 
+types of infrastructure, for instance linear infrastructure
+(e.g. roads, railways, and power lines) and higher dimensional landscape changes
 defined by polygons and areas (e.g. dams, mining or forestry areas, and deforestation sites). 
-However, we recognize that those patterns can get more complex as these structures 
-and spatial patterns extend over large distances and areas, and a further assessment 
+However, we recognize that those patterns can get more complex as these structures
+and spatial patterns extend over large distances and areas, and a further assessment
 of when these ZoI metrics converge might be needed.
